# LIMB-HT25

./: .clang-tidy  .gitignore  CMakeLists.txt  EMG-FinalRouting.ewprj  EMG-Final_Routing.ewprj  EMG-ForRouting.ewnet  EMG-ForRouting.ewprj  EMG-design1.ms14  README.md
CNC-files for EMG/: Copper Bottom.nc  Copper Top.nc  Cut Out.nc  Drilling.nc
EMG-KiCad/: #auto_saved_files#  EMG-KiCad.kicad_pcb  EMG-KiCad.kicad_prl  EMG-KiCad.kicad_pro  EMG-KiCad.kicad_sch  EMG_SCH.kicad_sym  LIMB_EMG_Library.kicad_sym  _autosave-EMG-KiCad.kicad_sch  fp-lib-table  sym-lib-table  ~EMG-KiCad.kicad_sch.lck
EMG-KiCad/EMG_PCB.pretty/: POT_3314J.kicad_mod
EMG_signal_processing/: create_sequence_dataset.py  emg_utils.py  main_pipe.py  simple_lstm.py
Electronics/EMG/: EMG-Design2.ms14
IMU_and_Motor_Com/IMU_communication/: CMakeLists.txt
scripts/: agx_setup_can.sh  deploy_imu.sh  nano_setup_can.sh
src/: README_new_structure.md  hello_world.cc  test_both_methods.py  test_emg_package.py
src/benchmark_results/: benchmark_results_20250929_102444.json  benchmark_results_20250929_103759.json
src/config/: sensor_config.json
src/data_fusion/: README_LSTM_FORMAT.md  __init__.py  calibration.json  frames.py  hand_pose.py  imu_emg_lstm_example.py  imu_vision_main.py  imu_vision_system.py  relative_pose.py  sensor_data_format.py  serial_reader.py  smoothing.py
src/emg/: INSTALL.md  README.md  __init__.py  data_processor.py  example_usage.py  feature_extractor.py  lstm_model.py  real_time_processor.py  requirements.txt  setup.py
src/imu/: README.md  __init__.py  calibration.py  main.py  (+5 more)
(+276 files in other folders)
